packages/hyperchad/template/tests/warnings/invalid-hex-color-4-digit.rs
use hyperchad_template::container;

fn main() {
    container! {
        div color=#1a2b { "4-digit hex - invalid" }
    };
}
